Cleared code smells in Controller-Test files